# metlink-cancellation-tweetbot

./: Cargo.toml  bleh.py  twitter-cache.json  twitter-cancellations.json
gtfs/: .gitignore  Cargo.toml
gtfs/metlink_gtfs_cron/: Cargo.toml
gtfs/metlink_gtfs_cron/src/: main.rs
gtfs/metlink_gtfs_lib/: Cargo.toml
gtfs/metlink_gtfs_lib/src/: client.rs  db.rs  gtfs.rs  lib.rs  realtime.rs  utils.rs
gtfs/metlink_gtfs_lib/src/db/: routes.rs  services.rs  stops.rs  trips.rs
gtfs/metlink_gtfs_lib/src/gtfs/: data.rs  load.rs  read.rs
gtfs/metlink_gtfs_lib/src/gtfs/data/: agency.rs  calendar.rs  feed_data.rs  stop.rs  utils.rs
gtfs/metlink_gtfs_lib/src/realtime/: load.rs  service_alerts.rs  trip_updates.rs  utils.rs  vehicle_positions.rs
gtfs/src/: db.rs  error.rs  gtfs.rs  main.rs  realtime.rs  tweeter.rs  utils.rs
gtfs/src/db/: routes.rs  stops.rs  trip.rs  trips.rs
gtfs/src/fucking_metlink/: cancellation.rs
gtfs/src/gtfs/: data.rs  error.rs  load.rs  read.rs
gtfs/src/gtfs/data/: agency.rs  calendar.rs  feed_data.rs  route.rs  stop.rs  stop_pattern.rs  time.rs  trip.rs  utils.rs
gtfs/src/realtime/: load.rs  service_alerts.rs
src/: main.rs  parser.rs  summary.rs  time.rs  tweet_cache.rs
