[package]
name = "metlink-cancellation-tweetbot"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { git = "https://github.com/RAnders00/egg-mode", branch = "tokio-v1.0-upgrade" }
serde = "~1.0.123"
serde_json = "~1.0.61"
futures = "~0.3.12"
tokio = { version = "1.0", features = ["full"] }
chrono = "~0.4.19"
