[package]
name = "metlink_gtfs_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
reqwest = "0.11"
time = { version = "0.2", features = ["serde"] }
tokio = { version = "1.8", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
thiserror = "1.0.26"
log = "0.4.14"
